tests/query_errors/window_meta_in_tick/error.txt
Error: 
    1 | define window w from  tumbling
    2 | state
    3 |   null
    4 | script from tick
    5 |   $ + 1
      |   ^^^^^ `$` isn't accessible in this context
    6 | script
    7 |   let state = event
    8 | end;